--- a/services.html
+++ b/services.html
@@ -64,7 +64,21 @@
             </div>
             <div class="services-grid">
                 <div class="service-card">
-                    <div class="service-image" style="background-image: url('assets/images/1.jpg');"></div>
+                    <div class="service-image-container">
+                        <div class="service-image active" style="background-image: url('assets/images/comingup.jpg');"></div>
+                        <div class="service-image" style="background-image: url('assets/images/comingup.jpg');"></div>
+                        <div class="service-image" style="background-image: url('assets/images/comingup.jpg');"></div>
+                        <div class="image-navigation">
+                            <button class="prev-image"><i class="fas fa-chevron-left"></i></button>
+                            <div class="image-indicators">
+                                <span class="indicator active"></span>
+                                <span class="indicator"></span>
+                                <span class="indicator"></span>
+                            </div>
+                            <button class="next-image"><i class="fas fa-chevron-right"></i></button>
+                        </div>
+                        <button class="toggle-fullscreen"><i class="fas fa-expand"></i></button>
+                    </div>
                     <div class="service-content">
                         <h3>Bánh Mì Tươi</h3>
                         <p>Bánh mì được làm tươi mỗi ngày với công thức truyền thống Việt Nam, đảm bảo hương vị thơm ngon và chất lượng.</p>
@@ -77,7 +91,21 @@
                     </div>
                 </div>
                 <div class="service-card">
-                    <div class="service-image" style="background-image: url('assets/images/5.jpg');"></div>
+                    <div class="service-image-container">
+                        <div class="service-image active" style="background-image: url('assets/images/cf.png');"></div>
+                        <div class="service-image" style="background-image: url('assets/images/cff.png');"></div>
+                        <div class="service-image" style="background-image: url('assets/images/cfff.png');"></div>
+                        <div class="image-navigation">
+                            <button class="prev-image"><i class="fas fa-chevron-left"></i></button>
+                            <div class="image-indicators">
+                                <span class="indicator active"></span>
+                                <span class="indicator"></span>
+                                <span class="indicator"></span>
+                            </div>
+                            <button class="next-image"><i class="fas fa-chevron-right"></i></button>
+                        </div>
+                        <button class="toggle-fullscreen"><i class="fas fa-expand"></i></button>
+                    </div>
                     <div class="service-content">
                         <h3>Cà Phê Đặc Sản</h3>
                         <p>Cà phê được pha chế từ hạt cà phê Robusta và Arabica chất lượng cao, mang đến hương vị đậm đà đặc trưng Việt Nam.</p>
@@ -85,20 +113,34 @@
                             <li>Cà phê đen truyền thống</li>
                             <li>Cà phê sữa đá</li>
                             <li>Cà phê trứng</li>
-                            <li>Cà phê dừa</li>
+                            <li>Cà phê sữa dừa</li>
                         </ul>
                     </div>
                 </div>
                 <div class="service-card">
-                    <div class="service-image" style="background-image: url('assets/images/2.jpg');"></div>
+                    <div class="service-image-container">
+                        <div class="service-image active" style="background-image: url('assets/images/traolong.png');"></div>
+                        <div class="service-image" style="background-image: url('assets/images/trahoacuc.png');"></div>
+                        <div class="service-image" style="background-image: url('assets/images/matchalatte.png');"></div>
+                        <div class="image-navigation">
+                            <button class="prev-image"><i class="fas fa-chevron-left"></i></button>
+                            <div class="image-indicators">
+                                <span class="indicator active"></span>
+                                <span class="indicator"></span>
+                                <span class="indicator"></span>
+                            </div>
+                            <button class="next-image"><i class="fas fa-chevron-right"></i></button>
+                        </div>
+                        <button class="toggle-fullscreen"><i class="fas fa-expand"></i></button>
+                    </div>
                     <div class="service-content">
                         <h3>Trà Thảo Mộc</h3>
                         <p>Trà được chọn lọc từ các loại thảo mộc tự nhiên, mang đến hương vị thanh mát và tốt cho sức khỏe.</p>
                         <ul class="service-features">
                             <li>Trà Olong</li>
                             <li>Trà hoa cúc</li>
-                            <li>Trà Olong</li>
-                            <li>Trà Olong</li>
+                            <li>Matcha Latte</li>
+                            <li>Coming up...</li>
                         </ul>
                     </div>
                 </div>
@@ -115,7 +157,21 @@
             </div>
             <div class="services-grid">
                 <div class="service-card">
-                    <div class="service-image" style="background-image: url('assets/images/4.jpg');"></div>
+                    <div class="service-image-container">
+                        <div class="service-image active" style="background-image: url('assets/images/12.jpg');"></div>
+                        <div class="service-image" style="background-image: url('assets/images/13.jpg');"></div>
+                        <div class="service-image" style="background-image: url('assets/images/comingup.jpg');"></div>
+                        <div class="image-navigation">
+                            <button class="prev-image"><i class="fas fa-chevron-left"></i></button>
+                            <div class="image-indicators">
+                                <span class="indicator active"></span>
+                                <span class="indicator"></span>
+                                <span class="indicator"></span>
+                            </div>
+                            <button class="next-image"><i class="fas fa-chevron-right"></i></button>
+                        </div>
+                        <button class="toggle-fullscreen"><i class="fas fa-expand"></i></button>
+                    </div>
                     <div class="service-content">
                         <h3>Tour Nội Địa</h3>
                         <p>Khám phá vẻ đẹp Việt Nam với các tour du lịch được thiết kế chuyên nghiệp, đáp ứng mọi nhu cầu của du khách.</p>
@@ -128,7 +184,21 @@
                     </div>
                 </div>
                 <div class="service-card">
-                    <div class="service-image" style="background-image: url('assets/images/3.jpg');"></div>
+                    <div class="service-image-container">
+                        <div class="service-image active" style="background-image: url('assets/images/14.jpg');"></div>
+                        <div class="service-image" style="background-image: url('assets/images/11.jpg');"></div>
+                        <div class="service-image" style="background-image: url('assets/images/16.jpg');"></div>
+                        <div class="image-navigation">
+                            <button class="prev-image"><i class="fas fa-chevron-left"></i></button>
+                            <div class="image-indicators">
+                                <span class="indicator active"></span>
+                                <span class="indicator"></span>
+                                <span class="indicator"></span>
+                            </div>
+                            <button class="next-image"><i class="fas fa-chevron-right"></i></button>
+                        </div>
+                        <button class="toggle-fullscreen"><i class="fas fa-expand"></i></button>
+                    </div>
                     <div class="service-content">
                         <h3>Tour Quốc Tế</h3>
                         <p>Trải nghiệm du lịch quốc tế với các điểm đến hấp dẫn, dịch vụ chất lượng và giá cả cạnh tranh.</p>
@@ -141,7 +211,21 @@
                     </div>
                 </div>
                 <div class="service-card">
-                    <div class="service-image" style="background-image: url('assets/images/6.png');"></div>
+                    <div class="service-image-container">
+                        <div class="service-image active" style="background-image: url('assets/images/6.png');"></div>
+                        <div class="service-image" style="background-image: url('assets/images/comingup.jpg');"></div>
+                        <div class="service-image" style="background-image: url('assets/images/comingup.jpg');"></div>
+                        <div class="image-navigation">
+                            <button class="prev-image"><i class="fas fa-chevron-left"></i></button>
+                            <div class="image-indicators">
+                                <span class="indicator active"></span>
+                                <span class="indicator"></span>
+                                <span class="indicator"></span>
+                            </div>
+                            <button class="next-image"><i class="fas fa-chevron-right"></i></button>
+                        </div>
+                        <button class="toggle-fullscreen"><i class="fas fa-expand"></i></button>
+                    </div>
                     <div class="service-content">
                         <h3>Dịch Vụ Hướng Dẫn</h3>
                         <p>Đội ngũ hướng dẫn viên chuyên nghiệp, giàu kinh nghiệm và am hiểu văn hóa địa phương.</p>
@@ -166,7 +250,21 @@
             </div>
             <div class="services-grid">
                 <div class="service-card">
-                    <div class="service-image" style="background-image: url('assets/images/5.jpg');"></div>
+                    <div class="service-image-container">
+                        <div class="service-image active" style="background-image: url('assets/images/comingup.jpg');"></div>
+                        <div class="service-image" style="background-image: url('assets/images/comingup.jpg');"></div>
+                        <div class="service-image" style="background-image: url('assets/images/comingup.jpg');"></div>
+                        <div class="image-navigation">
+                            <button class="prev-image"><i class="fas fa-chevron-left"></i></button>
+                            <div class="image-indicators">
+                                <span class="indicator active"></span>
+                                <span class="indicator"></span>
+                                <span class="indicator"></span>
+                            </div>
+                            <button class="next-image"><i class="fas fa-chevron-right"></i></button>
+                        </div>
+                        <button class="toggle-fullscreen"><i class="fas fa-expand"></i></button>
+                    </div>
                     <div class="service-content">
                         <h3>Vé Máy Bay Nội Địa</h3>
                         <p>Đặt vé máy bay nội địa với các hãng hàng không uy tín, giá cả cạnh tranh và dịch vụ hỗ trợ tận tâm.</p>
@@ -179,7 +277,21 @@
                     </div>
                 </div>
                 <div class="service-card">
-                    <div class="service-image" style="background-image: url('assets/images/4.jpg');"></div>
+                    <div class="service-image-container">
+                        <div class="service-image active" style="background-image: url('assets/images/comingup.jpg');"></div>
+                        <div class="service-image" style="background-image: url('assets/images/comingup.jpg');"></div>
+                        <div class="service-image" style="background-image: url('assets/images/comingup.jpg');"></div>
+                        <div class="image-navigation">
+                            <button class="prev-image"><i class="fas fa-chevron-left"></i></button>
+                            <div class="image-indicators">
+                                <span class="indicator active"></span>
+                                <span class="indicator"></span>
+                                <span class="indicator"></span>
+                            </div>
+                            <button class="next-image"><i class="fas fa-chevron-right"></i></button>
+                        </div>
+                        <button class="toggle-fullscreen"><i class="fas fa-expand"></i></button>
+                    </div>
                     <div class="service-content">
                         <h3>Vé Máy Bay Quốc Tế</h3>
                         <p>Đặt vé máy bay quốc tế với các hãng hàng không hàng đầu thế giới, đảm bảo chất lượng và an toàn.</p>
@@ -192,7 +304,21 @@
                     </div>
                 </div>
                 <div class="service-card">
-                    <div class="service-image" style="background-image: url('assets/images/1.jpg');"></div>
+                    <div class="service-image-container">
+                        <div class="service-image active" style="background-image: url('assets/images/6.png');"></div>
+                        <div class="service-image" style="background-image: url('assets/images/11.jpg');"></div>
+                        <div class="service-image" style="background-image: url('assets/images/16.jpg');"></div>
+                        <div class="image-navigation">
+                            <button class="prev-image"><i class="fas fa-chevron-left"></i></button>
+                            <div class="image-indicators">
+                                <span class="indicator active"></span>
+                                <span class="indicator"></span>
+                                <span class="indicator"></span>
+                            </div>
+                            <button class="next-image"><i class="fas fa-chevron-right"></i></button>
+                        </div>
+                        <button class="toggle-fullscreen"><i class="fas fa-expand"></i></button>
+                    </div>
                     <div class="service-content">
                         <h3>Dịch Vụ Hỗ Trợ</h3>
                         <p>Hỗ trợ khách hàng 24/7 với các dịch vụ đặt vé, thay đổi lịch bay và hỗ trợ khẩn cấp.</p>
@@ -217,7 +343,21 @@
             </div>
             <div class="services-grid">
                 <div class="service-card">
-                    <div class="service-image" style="background-image: url('assets/images/2.jpg');"></div>
+                    <div class="service-image-container">
+                        <div class="service-image active" style="background-image: url('assets/images/comingup.jpg');"></div>
+                        <div class="service-image" style="background-image: url('assets/images/comingup.jpg');"></div>
+                        <div class="service-image" style="background-image: url('assets/images/comingup.jpg');"></div>
+                        <div class="image-navigation">
+                            <button class="prev-image"><i class="fas fa-chevron-left"></i></button>
+                            <div class="image-indicators">
+                                <span class="indicator active"></span>
+                                <span class="indicator"></span>
+                                <span class="indicator"></span>
+                            </div>
+                            <button class="next-image"><i class="fas fa-chevron-right"></i></button>
+                        </div>
+                        <button class="toggle-fullscreen"><i class="fas fa-expand"></i></button>
+                    </div>
                     <div class="service-content">
                         <h3>Visa Du Lịch</h3>
                         <p>Tư vấn và hỗ trợ làm visa du lịch các nước với quy trình đơn giản, nhanh chóng và tỷ lệ thành công cao.</p>
@@ -230,7 +370,21 @@
                     </div>
                 </div>
                 <div class="service-card">
-                    <div class="service-image" style="background-image: url('assets/images/3.jpg');"></div>
+                    <div class="service-image-container">
+                        <div class="service-image active" style="background-image: url('assets/images/comingup.jpg');"></div>
+                        <div class="service-image" style="background-image: url('assets/images/comingup.jpg');"></div>
+                        <div class="service-image" style="background-image: url('assets/images/comingup.jpg');"></div>
+                        <div class="image-navigation">
+                            <button class="prev-image"><i class="fas fa-chevron-left"></i></button>
+                            <div class="image-indicators">
+                                <span class="indicator active"></span>
+                                <span class="indicator"></span>
+                                <span class="indicator"></span>
+                            </div>
+                            <button class="next-image"><i class="fas fa-chevron-right"></i></button>
+                        </div>
+                        <button class="toggle-fullscreen"><i class="fas fa-expand"></i></button>
+                    </div>
                     <div class="service-content">
                         <h3>Visa Công Tác</h3>
                         <p>Hỗ trợ làm visa công tác với các thủ tục chuyên nghiệp, đảm bảo đúng quy định và thời gian.</p>
@@ -243,7 +397,21 @@
                     </div>
                 </div>
                 <div class="service-card">
-                    <div class="service-image" style="background-image: url('assets/images/4.jpg');"></div>
+                    <div class="service-image-container">
+                        <div class="service-image active" style="background-image: url('assets/images/comingup.jpg');"></div>
+                        <div class="service-image" style="background-image: url('assets/images/comingup.jpg');"></div>
+                        <div class="service-image" style="background-image: url('assets/images/comingup.jpg');"></div>
+                        <div class="image-navigation">
+                            <button class="prev-image"><i class="fas fa-chevron-left"></i></button>
+                            <div class="image-indicators">
+                                <span class="indicator active"></span>
+                                <span class="indicator"></span>
+                                <span class="indicator"></span>
+                            </div>
+                            <button class="next-image"><i class="fas fa-chevron-right"></i></button>
+                        </div>
+                        <button class="toggle-fullscreen"><i class="fas fa-expand"></i></button>
+                    </div>
                     <div class="service-content">
                         <h3>Passport</h3>
                         <p>Hỗ trợ làm passport mới, gia hạn passport và các dịch vụ liên quan với quy trình nhanh chóng.</p>
@@ -351,4 +519,4 @@
 
     <script src="assets/js/main.js"></script>
 </body>
-</html> 
+</html>
