--- a/about.html
+++ b/about.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Về Chúng Tôi - Nhiên Việt Inspired</title>
-    <meta name="description" content="Tìm hiểu về văn hóa doanh nghiệp, sứ mệnh, tầm nhìn và giá trị cốt lõi của Nhiên Việt Inspired">
+    <title>Về Chúng Tôi - Nhiên Việt Go</title>
+    <meta name="description" content="Tìm hiểu về văn hóa doanh nghiệp, sứ mệnh, tầm nhìn và giá trị cốt lõi của Nhiên Việt Go">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -15,8 +15,8 @@
             <div class="logo">
                 <img src="assets/images/LOGO.png" alt="NVI Logo">
                 <div class="logo-text">
-                    <h1>Nhiên Việt Inspired</h1>
-                    <p>Bread - Coffee - Tea</p>
+                    <h1>Nhiên Việt Go</h1>
+                    <p>F&B - Flight Ticket</p>
                 </div>
             </div>
             <nav>
@@ -24,6 +24,7 @@
                     <li><a href="index.html">Trang chủ</a></li>
                     <li><a href="about.html">Giới thiệu</a></li>
                     <li><a href="services.html">Dịch vụ</a></li>
+                    <li><a href="careers.html">Tuyển dụng</a></li>
                     <li><a href="contact.html">Liên hệ</a></li>
                 </ul>
             </nav>
@@ -40,7 +41,7 @@
     <section class="hero" style="height: 60vh; margin-top: 80px;">
         <div class="hero-content">
             <h1>Văn Hóa Doanh Nghiệp</h1>
-            <p>Khám phá những giá trị và triết lý định hình nên Nhiên Việt Inspired</p>
+            <p>Khám phá những giá trị và triết lý định hình nên Nhiên Việt Go</p>
         </div>
     </section>
 
@@ -224,7 +225,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>Nhiên Việt Inspired</h3>
+                    <h3>Nhiên Việt Go</h3>
                     <p>Mang đến trải nghiệm dịch vụ trọn vẹn - tiện lợi - tinh tế - chất lượng từ ăn uống đến hành trình bay khắp thế giới.</p>
                 </div>
                 <div class="footer-section">
@@ -242,13 +243,13 @@
                 </div>
                 <div class="footer-section">
                     <h3>Theo Dõi</h3>
-                    <a href="https://www.facebook.com/tourvemaybaypassport"><i class="fab fa-facebook"></i> Facebook</a>
+                    <a href="https://bitly.li/bIdA"><i class="fab fa-facebook"></i> Facebook</a>
                     <a href="#"><i class="fab fa-instagram"></i> Instagram</a>
                     <a href="#"><i class="fab fa-youtube"></i> YouTube</a>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 Nhiên Việt Inspired. Tất cả quyền được bảo lưu.</p>
+                <p>&copy; 2024 Nhiên Việt Go. Tất cả quyền được bảo lưu.</p>
             </div>
         </div>
     </footer>
@@ -260,4 +261,4 @@
 
     <script src="assets/js/main.js"></script>
 </body>
-</html> 
+</html>
