--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Liên Hệ - Nhiên Việt Inspired</title>
-    <meta name="description" content="Liên hệ với Nhiên Việt Inspired để được tư vấn và hỗ trợ tốt nhất về các dịch vụ ăn uống, du lịch, vé máy bay, visa và passport">
+    <title>Liên Hệ - Nhiên Việt Go</title>
+    <meta name="description" content="Liên hệ với Nhiên Việt Go để được tư vấn và hỗ trợ tốt nhất về các dịch vụ ăn uống, du lịch, vé máy bay, visa và passport">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <!-- EmailJS CDN -->
@@ -19,8 +19,8 @@
             <div class="logo">
                 <img src="assets/images/LOGO.png" alt="NVI Logo">
                 <div class="logo-text">
-                    <h1>Nhiên Việt Inspired</h1>
-                    <p>Bread - Coffee - Tea</p>
+                    <h1>Nhiên Việt Go</h1>
+                    <p>F&B - Flight Ticket</p>
                 </div>
             </div>
             <nav>
@@ -28,6 +28,7 @@
                     <li><a href="index.html">Trang chủ</a></li>
                     <li><a href="about.html">Giới thiệu</a></li>
                     <li><a href="services.html">Dịch vụ</a></li>
+                    <li><a href="careers.html">Tuyển dụng</a></li>
                     <li><a href="contact.html">Liên hệ</a></li>
                 </ul>
             </nav>
@@ -148,7 +149,7 @@
         <div class="container">
             <div class="section-header">
                 <h2>Vị Trí Của Chúng Tôi</h2>
-                <p>Tìm đường đến Nhiên Việt Inspired một cách dễ dàng</p>
+                <p>Tìm đường đến Nhiên Việt Go một cách dễ dàng</p>
             </div>
             <div style="text-align: center; margin-top: 2rem;">
                 <div style="background: var(--white); padding: 2rem; border-radius: 15px; box-shadow: var(--shadow);">
@@ -238,7 +239,7 @@
             </div>
             <div style="text-align: center;">
                 <div style="display: flex; justify-content: center; gap: 2rem; flex-wrap: wrap; margin-top: 2rem;">
-                    <a href="https://www.facebook.com/tourvemaybaypassport" style="display: inline-block; padding: 1rem 2rem; background: #1877f2; color: white; text-decoration: none; border-radius: 10px; transition: var(--transition);">
+                    <a href="https://bitly.li/bIdA" style="display: inline-block; padding: 1rem 2rem; background: #1877f2; color: white; text-decoration: none; border-radius: 10px; transition: var(--transition);">
                         <i class="fab fa-facebook" style="margin-right: 0.5rem;"></i>Facebook
                     </a>
                     <a href="#" style="display: inline-block; padding: 1rem 2rem; background: #e4405f; color: white; text-decoration: none; border-radius: 10px; transition: var(--transition);">
@@ -262,7 +263,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>Nhiên Việt Inspired</h3>
+                    <h3>Nhiên Việt Go</h3>
                     <p>Mang đến trải nghiệm dịch vụ trọn vẹn - tiện lợi - tinh tế - chất lượng từ ăn uống đến hành trình bay khắp thế giới.</p>
                 </div>
                 <div class="footer-section">
@@ -286,7 +287,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 Nhiên Việt Inspired. Tất cả quyền được bảo lưu.</p>
+                <p>&copy; 2024 Nhiên Việt Go. Tất cả quyền được bảo lưu.</p>
             </div>
         </div>
     </footer>
@@ -377,14 +378,14 @@
             const marker = new google.maps.Marker({
                 position: businessLocation,
                 map: map,
-                title: "Nhiên Việt Inspired",
+                title: "Nhiên Việt Go",
                 animation: google.maps.Animation.DROP
             });
             
             // Info window content
             const infoWindowContent = `
                 <div style="max-width: 300px; font-family: Arial, sans-serif;">
-                    <h3 style="color: #2c5530; margin: 0 0 10px 0;">Nhiên Việt Inspired</h3>
+                    <h3 style="color: #2c5530; margin: 0 0 10px 0;">Nhiên Việt Go</h3>
                     <p style="margin: 5px 0; color: #666;">
                         <strong>Địa chỉ:</strong><br>
                         A39, Nguyễn Sỹ Sách<br>
@@ -446,4 +447,4 @@
         });
     </script>
 </body>
-</html> 
+</html>
