--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nhiên Việt Inspired - Dịch vụ Ăn uống & Du lịch</title>
+    <title>Nhiên Việt Go - Dịch vụ Ăn uống & Du lịch</title>
     <meta name="description" content="Công ty TNHH Phát triển Thương mại Dịch vụ NVI - Chuyên cung cấp dịch vụ ăn uống, tour du lịch, vé máy bay, visa và passport">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -11,21 +11,6 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 </head>
 <body>
-
-    <!--Start of Tawk.to Script-->
-<script type="text/javascript">
-    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-    (function(){
-    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-    s1.async=true;
-    s1.src='https://embed.tawk.to/688d76e4cce733192625d65b/1j1k9grvk';
-    s1.charset='UTF-8';
-    s1.setAttribute('crossorigin','*');
-    s0.parentNode.insertBefore(s1,s0);
-    })();
-    </script>
-    <!--End of Tawk.to Script-->
-
     <!-- Skip Link for Accessibility -->
     <a href="#main-content" class="skip-link">Chuyển đến nội dung chính</a>
 
@@ -35,8 +20,8 @@
             <div class="logo">
                 <img src="assets/images/LOGO.png" alt="NVI Logo">
                 <div class="logo-text">
-                    <h1>Nhiên Việt Inspired</h1>
-                    <p>Bread - Coffee - Tea</p>
+                    <h1>Nhiên Việt Go</h1>
+                    <p>F&B - Flight Ticket</p>
                 </div>
             </div>
             <nav>
@@ -44,7 +29,7 @@
                     <li><a href="index.html">Trang chủ</a></li>
                     <li><a href="about.html">Giới thiệu</a></li>
                     <li><a href="services.html">Dịch vụ</a></li>
-                    <li><a href="#values">Giá trị</a></li>
+                    <li><a href="careers.html">Tuyển dụng</a></li>
                     <li><a href="contact.html">Liên hệ</a></li>
                 </ul>
             </nav>
@@ -60,7 +45,7 @@
         <div class="floating-element-1"></div>
         <div class="floating-element-2"></div>
         <div class="hero-content">
-            <h1>Nhiên Việt Inspired</h1>
+            <h1>Nhiên Việt Go</h1>
             <p>Mang đến trải nghiệm dịch vụ trọn vẹn - tiện lợi - tinh tế - chất lượng từ ăn uống đến hành trình bay khắp thế giới</p>
             <span class="divider"></span>
             <div class="cta-buttons">
@@ -114,7 +99,7 @@
                             <li>Bánh mì tươi ngon hàng ngày</li>
                             <li>Cà phê đặc sản Việt Nam</li>
                             <li>Trà thảo mộc tự nhiên</li>
-                            <li>Không gian thưởng thức thoải mái</li>
+                            <li>Phục vụ chuyên nghiệp</li>
                         </ul>
                     </div>
                 </div>
@@ -284,7 +269,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>Nhiên Việt Inspired</h3>
+                    <h3>Nhiên Việt Go</h3>
                     <p>Mang đến trải nghiệm dịch vụ trọn vẹn - tiện lợi - tinh tế - chất lượng từ ăn uống đến hành trình bay khắp thế giới.</p>
                 </div>
                 <div class="footer-section">
@@ -302,13 +287,13 @@
                 </div>
                 <div class="footer-section">
                     <h3>Theo Dõi</h3>
-                    <a href="https://www.facebook.com/tourvemaybaypassport"><i class="fab fa-facebook"></i> Facebook</a>
+                    <a href="https://bitly.li/bIdA"><i class="fab fa-facebook"></i> Facebook</a>
                     <a href="#"><i class="fab fa-instagram"></i> Instagram</a>
                     <a href="#"><i class="fab fa-youtube"></i> YouTube</a>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 Nhiên Việt Inspired. Tất cả quyền được bảo lưu.</p>
+                <p>&copy; 2024 Nhiên Việt Go. Tất cả quyền được bảo lưu.</p>
             </div>
         </div>
     </footer>
@@ -320,4 +305,4 @@
 
     <script src="assets/js/main.js"></script>
 </body>
-</html> 
+</html>
