--- a/services.html
+++ b/services.html
@@ -3,20 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dịch Vụ - Nhiên Việt Inspired</title>
-    <meta name="description" content="Khám phá các dịch vụ đa dạng của Nhiên Việt Inspired: ăn uống, tour du lịch, vé máy bay, visa và passport">
+    <title>Dịch Vụ - Nhiên Việt Go</title>
+    <meta name="description" content="Khám phá các dịch vụ đa dạng của Nhiên Việt Go: ăn uống, tour du lịch, vé máy bay, visa và passport">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
+
+    <!--Start of Tawk.to Script-->
+<script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/688d76e4cce733192625d65b/1j1k9grvk';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+    })();
+    </script>
+    <!--End of Tawk.to Script-->
+
     <!-- Header -->
     <header class="header">
         <div class="nav-container">
             <div class="logo">
                 <img src="assets/images/LOGO.png" alt="NVI Logo">
                 <div class="logo-text">
-                    <h1>Nhiên Việt Inspired</h1>
-                    <p>Bread - Coffee - Tea</p>
+                    <h1>Nhiên Việt Go</h1>
+                    <p>F&B - Flight Ticket</p>
                 </div>
             </div>
             <nav>
@@ -24,6 +39,7 @@
                     <li><a href="index.html">Trang chủ</a></li>
                     <li><a href="about.html">Giới thiệu</a></li>
                     <li><a href="services.html">Dịch vụ</a></li>
+                    <li><a href="careers.html">Tuyển dụng</a></li>
                     <li><a href="contact.html">Liên hệ</a></li>
                 </ul>
             </nav>
@@ -40,7 +56,7 @@
     <section class="hero" style="height: 60vh; margin-top: 80px;">
         <div class="hero-content">
             <h1>Dịch Vụ Của Chúng Tôi</h1>
-            <p>Khám phá các dịch vụ đa dạng và chất lượng cao của Nhiên Việt Inspired</p>
+            <p>Khám phá các dịch vụ đa dạng và chất lượng cao của Nhiên Việt Go</p>
         </div>
     </section>
 
@@ -431,7 +447,7 @@
     <section class="section">
         <div class="container">
             <div class="section-header">
-                <h2>Tại Sao Chọn Nhiên Việt Inspired?</h2>
+                <h2>Tại Sao Chọn Nhiên Việt Go?</h2>
                 <p>Những lý do khiến chúng tôi trở thành lựa chọn hàng đầu của khách hàng</p>
             </div>
             <div class="values-grid">
@@ -483,7 +499,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>Nhiên Việt Inspired</h3>
+                    <h3>Nhiên Việt Go</h3>
                     <p>Mang đến trải nghiệm dịch vụ trọn vẹn - tiện lợi - tinh tế - chất lượng từ ăn uống đến hành trình bay khắp thế giới.</p>
                 </div>
                 <div class="footer-section">
@@ -501,13 +517,13 @@
                 </div>
                 <div class="footer-section">
                     <h3>Theo Dõi</h3>
-                    <a href="https://www.facebook.com/tourvemaybaypassport"><i class="fab fa-facebook"></i> Facebook</a>
+                    <a href="https://bitly.li/bIdA"><i class="fab fa-facebook"></i> Facebook</a>
                     <a href="#"><i class="fab fa-instagram"></i> Instagram</a>
                     <a href="#"><i class="fab fa-youtube"></i> YouTube</a>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 Nhiên Việt Inspired. Tất cả quyền được bảo lưu.</p>
+                <p>&copy; 2024 Nhiên Việt Go. Tất cả quyền được bảo lưu.</p>
             </div>
         </div>
     </footer>
